--- a/package.json
+++ b/package.json
@@ -110,7 +110,7 @@
     },
     "plugins": {
       "@release-it/conventional-changelog": {
-        "preset": "react"
+        "preset": "angular"
       }
     }
   },
